--- a/admin/static/styles.css
+++ b/admin/static/styles.css
@@ -2,6 +2,14 @@ body{
   font-family: DM Sans;
   margin: 0;
 }
+a{
+  text-decoration-line: none;
+}
+input[type="text"] {
+  border: none; /* 테두리 없애기 */
+  border-radius: 20px;
+  outline: none;
+}
 .table_content{
   display: flex;
   flex-direction: column;
@@ -18,9 +26,10 @@ body{
   background: #FFFED8;
 }
 .row_top .row_text{
+  font-size: 16px;
   color: #000;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 140%; /* 22.4px */
   text-transform: capitalize;
 }
@@ -128,7 +137,7 @@ body{
       }
       .table_title{
         display: flex;
-        padding-left: 10px;
+        padding: 10px 10px;
         align-items: center;
         align-self: stretch;
       }
@@ -141,6 +150,22 @@ body{
         line-height: 28px; /* 133.333% */
         letter-spacing: 2.1px;
         text-transform: uppercase;
+      }
+      .search-box {
+        display: flex;
+        width: 400px;
+        padding: 10px 14px;
+        align-items: center;
+        gap: 8px;
+        align-self: stretch;
+        border-radius: 8px;
+        border: 1px solid var(--gray-300, #D0D5DD);
+      }
+      #searchInput{
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        flex: 1 0 0;
       }
       .table .table_content .row_top{
         height: 40px;
@@ -202,6 +227,23 @@ body{
         width: 100px;
         text-align: center;
       }
+      .name_client,.number_client,
+      .sex_client,.std_client{
+        flex: 1 0 0;
+        text-align: center;
+      }
+      .row_top .row_text.dob,
+      .row.a .row_text.dob, 
+      .row.b .row_text.dob{
+        flex: 1 0 0;
+        text-align: center;
+      }
+      .row_top .row_text.agree,
+      .row.a .row_text.agree, 
+      .row.b .row_text.agree{
+        flex: 1 0 0;
+        text-align: center;
+      }
       .table_content .row_time{
         height: 15px;
         padding: 0px 8px;
@@ -235,9 +277,8 @@ body{
         flex: 1 0 0;
         align-self: stretch;
         background: #FFF;
-        border-bottom: 1px solid #000;
       }
-      .row_box .row.b{
+      .row.b{
         display: flex;
         min-height: 40px;
         max-height: 45px;
@@ -279,6 +320,15 @@ body{
       display: none;
     }
     .table_title{
+      display: none;
+    }
+    .row_text.sex{
+      display: none;
+    }
+    .row_text.std{
+      display: none;
+    }
+    .row_text.note{
       display: none;
     }
     .header{
@@ -390,6 +440,23 @@ body{
       width: 130px;
       text-align: center;
     }
+    .name_client,.number_client,
+    .sex_client,.std_client{
+      flex: 1 0 0;
+      text-align: center;
+    }
+    .row_top .row_text.dob,
+    .row.a .row_text.dob, 
+    .row.b .row_text.dob{
+      flex: 1 0 0;
+      text-align: center;
+    }
+    .row_top .row_text.agree,
+    .row.a .row_text.agree, 
+    .row.b .row_text.agree{
+      flex: 1 0 0;
+      text-align: center;
+    }
     .table_content .row_time{
       border-top: 1px solid #9A9A9A;
       border-bottom: 1px solid #9A9A9A;
@@ -417,7 +484,6 @@ body{
       align-self: stretch;
     }
     .row.a{
-      border-bottom: 1px solid #9A9A9A;
       background: #FFF;
     }
     .row.b{
@@ -425,15 +491,6 @@ body{
     }
     .row .row_text{
       font-size: 15px;
-    }
-    .row_text.sex{
-      display: none;
-    }
-    .row_text.std{
-      display: none;
-    }
-    .row_text.note{
-      display: none;
     }
   }
   /*-----------------------------테블릿 end------------------------------*/
