--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -322,20 +322,26 @@
     font-size: 20px;
     color: #515151;
     background-color: #FFFDAC;
-    padding: 10px 30px 10px 30px;
-    border: 1px solid #FFFDAC;
+    padding: 10px 30px;
+    border: 1px solid #E9EAEC;
     border-radius: 18px;
     width: 47%;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .signup-button-unselected {
     font-size: 20px;
     color: #B5B5B5;
     background-color: #FFFFFF;
-    padding: 10px 30px 10px 30px;
+    padding: 10px 30px;
     border: 1px solid #E9EAEC;
     border-radius: 18px;
     width: 47%;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .signup-terms {
@@ -544,10 +550,6 @@
     margin-bottom: 30px;
 }
 
-.myTree-main-content {
-    padding: 0 10px;
-}
-
 .myTree-container {
     padding: 0 15px;
 }
@@ -601,6 +603,7 @@
     font-family: 'DM Sans';
     font-size: 12px;
     font-weight: 600;
+    padding: 0 3px;
 }
 
 .myTree-program-time {
@@ -635,7 +638,7 @@
     font-size: 10px;
     font-weight: 700;
     padding: 3px 7px;
-    margin-left: 15px;
+    margin-left: 12px;
 
 }
 
@@ -649,7 +652,7 @@
     font-size: 10px;
     font-weight: 700;
     padding: 3px 7px;
-    margin-left: 15px;
+    margin-left: 12px;
 }
 
 .myTree-status-list {
@@ -661,7 +664,6 @@
     font-size: 10px !important;
     font-weight: 700;
     padding: 3px 7px;
-    margin-left: 15px;
 }
 
 .myTree-status {
@@ -689,7 +691,152 @@
     width: 100%;
     margin: 30px 0;
 }
+
+@media screen and (min-width: 280px) and (max-width : 354px) {
+    .myTree-main-container {
+        padding: 0px;
+    }
+    .myTree-content{
+        padding: 10px;
+    }
+    .myTree-program-name {
+        font-size: 11px
+    }
+    .myTree-program-time {
+        font-size: 9px
+    }
+    .myTree-count {
+        font-size: 10px;
+        padding: 0
+    }
+    .myTree-btn-reserv, .myTree-btn-cancle {
+        margin-left: 2px;
+    }
+    .myTree-program-date {
+        font-size: 13px;
+    }
+    .myTree-program-date-time {
+        margin: 0 5px;
+        font-size: 10px;
+    }
+}
 /* MYTREE END */
+
+
+/* MYTREE MODAL START */
+.myTree-modal-header {
+    background: '#FFFDAC' !important;
+    width: 100%;
+}
+
+.myTree-modal-title {
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.myTree-modal-confirm-title {
+    text-align: center;
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-size: 20px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 25px;
+}
+
+.myTree-modal-content {
+    margin: 30px 0;
+}
+
+.myTree-modal-inner-content {
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+    align-items: center;
+}
+
+.myTree-modal-inner-txt {
+    width: 100px;
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.myTree-modal-inner-view {
+    display: flex;
+    align-items: end;
+}
+
+.small-txt {
+    font-size: 12px;
+    margin: 0 2px;
+}
+
+.myTree-modal-inner-data {
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.myTree-modal-empty {
+    height: 50px;
+}
+
+.myTree-modal-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.myTree-modal-btn {
+    width: 135px;
+    height: 50px;
+    border-radius: 20px;
+    border: 1px solid #E9EAEC;
+    color: #515151;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+}
+
+.myTree-modal-link {
+    text-decoration: none;
+    color: #515151;
+}
+
+.btn-right {
+    background: #FFFDAC;
+}
+
+.btn-wrong {
+    background: #fff;
+}
+
+.btn-pull {
+    width: 100%;
+}
+
+.title-view {
+    margin: 10px 0;
+}
+
+.view {
+    height: 100px;
+}
+
+.line {
+    border-top: 1px solid #D9D9D9;
+}
+.line2 {
+    border-bottom: 1px solid #D9D9D9;
+}
+
 
 
 
@@ -867,20 +1014,23 @@
 
 .reservation-category-container {
     display: flex;
+    align-items: flex-end;
     background-color: white;
     padding:10px;
     border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
+    /* border-bottom: 1px solid #D9D9D9; */
 
     .reservation-category-icon{
-        width: 26px;
-        
+        width: 24px;
+        height: 24px;
     }
 
     .reservation-category{
         font-weight: 600;
         font-size: 16px;
         margin-left: 10px;
+        font-family: 'DM Sans';
+        color: #111;
     }
 }
 
@@ -891,8 +1041,10 @@
 .reservation-content-container{
     padding:20px;
     background-color: white;
-    border-top: 1px solid #D9D9D9;
-    border-bottom: 1px solid #D9D9D9;
+}
+
+.bottom-btn {
+    padding: 15px !important;
 }
 
 .reservation-program-container{
@@ -904,6 +1056,10 @@
         border: 1px solid #E9EAEC;
         border-radius: 15px;
         justify-content: space-between;
+        color: #1C1C1C;
+        text-align: center;
+        font-size: 13px;
+        font-weight: 500;
     }
 
     .reservation-program-contents{
@@ -914,6 +1070,8 @@
             border-top: 1px dotted #E9EAEC;
             margin: 10px 0;
         }
+        font-size: 13px;
+        font-weight: 500;
     }
 
     .reservation-category{
@@ -941,41 +1099,57 @@
     border: 1px solid #E9EAEC;
     cursor: pointer;
     background: white;
+    color: #515151;
+    font-family: 'DM Sans';
+    font-size: 14px;
+    font-weight: 500;
 }
 
 .reservation-time-selected{
     background-color: #FFFDAC; /* 선택된 시간에 노란색 배경 적용 */
-    border: 1px solid #FFFDAC;
+    border: 1px solid #E9EAEC;
 }
 
 .reservation-pay-active{
-    padding: 20px;
+    padding: 15px;
     border: 1px solid #FFEB54;
     border-radius: 15px;
     background: #FFEB54;
-    color: #000000;
+    color: #515151;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
+    font-family: 'DM Sans';
     width: 100%;
 }
 
 
 .reservation-pay-inactive{
-    padding: 20px;
+    padding: 15px;
     border: 1px solid #E9EAEC;
     border-radius: 15px;
     background: #E9EAEC;
     color: #ffffff;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
     width: 100%;
+    font-family: 'DM Sans';
 }
 
 /* RESERVATION END */
 
 /* RESERVATION MODAL START */
+
+.btn-rong {
+    width: 160px;
+}
+
+.reservationModal-info {
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-size: 15px;
+    font-weight: 500;
+    margin-left: 1px
+}
 
 
 .reservaionModal-header{
@@ -985,25 +1159,32 @@
 }
 
 .reservationModal-header1{
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 25px;
+    color: #1C1C1C;
+    font-family: 'DM Sans';
+    font-weight: 700;
+    margin-top: 15px;
+    margin-bottom: 30px;
     text-align: center;
-    margin-bottom: 20px;   
 }
 
 .reservationModal-warning{
-    font-size: 15px;
-    color: red;
-    margin-bottom: 10px;
+    font-size: 14px;
+    color: #FA0000;
+    font-family: 'DM Sans';
+    font-weight: 600;
+    margin: 10px 0;
 }
 
 .reservationModal-confirm{
-    font-size: 20px;
-    color: #B5B5B5;
-    background-color: #FFFFFF;
-    padding: 10px 30px 10px 30px;
+    font-family: 'DM Sans';
+    font-size: 17px;
+    font-weight: 600;
+    color: #515151;
+    background-color: #FFFDAC;
+    padding: 12px 30px;
     border: 1px solid #E9EAEC;
-    border-radius: 18px;
+    border-radius: 20px;
     width: 100%;
 }
 
